--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "hekmatinasser/verta": "^1.12",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "symfony/process": "^5.3"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
